# Anonymity_Protocol

./: .gitignore  CMakeLists.txt  README.md  main.cpp
API/: ano_protocol.cpp  ano_protocol.h
ano_protocol/: ano_protocol.cpp  ano_protocol.h
doc/: 匿名协议灵活帧格式.md  工程目录.md
test/: main.cpp
